--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,5 +6,7 @@ services:
     container_name: 'node14'
     working_dir: '/root/'
     tty: true
+    ports:
+      - "18080:8080"
     volumes:
       - ./opt:/root/opt
